# rust-embedded-template-vsc

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  cargo-generate.toml  device_STM32G431.x  linker.ld  linker_low_stack.ld  vector_STM32G431.txt
.cargo/: config.toml
cpp_src/cpp-example-code/: .cproject  .project  cpp-example-code.ioc  cpp-example-code.launch
cpp_src/cpp-example-code/Core/Src/: main.c
src/: main.rs
