[package]
name = "Rust_Embedded_Template_VSC"
version = "0.1.0"
edition = "2021"


[dependencies]
#panic-halt = "0.2"  # Panic handler that halts the system
#defmt = "1.0"
#defmt-rtt = "1.0"
#panic-probe = { version = "1.0", features = ["print-rtt"]  }
#rtt-target = "0.6"  # RTT target for embedded systems
#critical-section = "1.2"
cortex-m = "0.7"  # Cortex-M support for embedded systems


[build-dependencies]
cc = "1.2"  # For building C/C++ code if needed

[profile.gdb]
inherits = "dev"
debug = 2
debug-assertions = true
overflow-checks = true
opt-level = 0

[profile.release]
debug = 0
debug-assertions = false
opt-level = "z"
lto = true
